# Soundspeed

./: .env.example  .gitignore  CONTRIBUTING.md  Caddyfile  Caddyfile.template  README.md  TECHNICAL_REPORT.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: backend-agent.md  backend-asr.md  docs.md  frontend.md  quality.md
.claude/hooks/: enforce-lead-no-code.sh  post-compact-reminder.sh  verify-gate.sh
.claude/skills/: verify-app.md
backend/: requirements.txt
backend/api/: __init__.py  __main__.py  app.py  auth.py  entrypoint.py  ws.py
backend/asr/: __init__.py  config.py  funasr_online.py  funasr_runner.py  live_session.py  stream_driver.py  whisper_runner.py
backend/audio/: __init__.py  buffered_source.py  channel.py  constants.py  device_resolve.py  device_source.py  devices.py  file_source.py  source.py
backend/core/: events.py  export.py  orchestrator.py  script_extract.py  script_import.py  session.py
backend/db/: dal.py  lifecycle.py  schema.sql  seed.py
backend/diarization/: __init__.py  backfill.py  buffer.py  engine.py  enroll_recorder.py  registry.py
backend/llm/: client.py  config.py  errors.py  gemma_tools.py  multimodal.py  service.py
backend/pipelines/: __init__.py  l2_constants.py  l2_take.py  memo_route.py  note_parse.py  np_apply.py  np_extract.py  np_note.py  np_resolve.py  qp_query.py  sp_script.py  voice_dispatch.py  voice_dispatch_helpers.py
backend/tests/: conftest.py  qp_eval_seed.py  test_align_segments.py  test_api.py  test_api_notes.py  test_asr_route.py  test_audio_source.py  test_buffered_source.py  test_channel_processor.py  test_dal.py  test_dal_notes.py  test_dal_take_by_coords.py  test_dal_take_l2.py  test_dal_take_vacate.py  test_dal_v4_shot.py  test_detect_device.py  test_detector.py  test_device_resolve.py  test_device_source.py  test_devices.py  test_entrypoint.py  (+76 more)
docs/: 2026-05-29-1.J-1.L-browser-runbook.md  2026-06-02-windows-llama-cpp-runbook.md  2026-06-05-note-pipeline-flow.md  2026-06-06-input-pipeline-architecture-map.md  2026-06-07-https-lan-mobile-runbook.md  development-process.md  frontend-admin-ui-handoff.md  orchestrator-handoff.md  structure.md
frontend/: .env.example  components.json  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts  vitest.setup.ts
scripts/: audio_smoke.py  detect_device.py  install_accel.py  l2_smoke.py  setup-https.sh  sp_material_probe.py  sp_smoke.py  sp_vision_probe.py
(+167 files in other folders)
