[project]
name = "soundspeed"
version = "0.1.0"
requires-python = ">=3.13"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
markers = [
    "smoke: 需要真实模型文件，默认 skip（用 --smoke flag 激活）",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
