[project]
name = "soundspeed"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  # —— 全平台原样（同一 wheel，无 marker）——
  "numpy==2.4.4",
  "sounddevice==0.5.5",
  "soundfile==0.13.1",
  "soxr==1.1.0",
  "fastapi==0.136.3",
  "uvicorn==0.48.0",
  "websockets==16.0",
  "huggingface_hub==1.17.0",
  "python-multipart>=0.0.9",
  # —— 剧本文件提取（3.F：上传 docx/pdf → 文本）：纯 Python 跨平台 ——
  "python-docx==1.1.2",
  "pypdf==5.1.0",
  # —— ML 框架：版本在此 pin，平台分流交给 [tool.uv.sources] ——
  # 写 ==2.11.0，绝不要写 +cu128（local version 在 mac 上无法解析）
  "torch==2.11.0",
  "torchaudio==2.11.0",
  "torchcodec==0.14.0",             # pyannote 4.0 硬依赖，与 torch 同步钉
  "pyannote.audio==4.0.4",
  "silero-vad==6.2.1",              # 不带 onnx extra（base 只拉 torch/torchaudio/packaging）
  "onnxruntime==1.26.0",            # 两端普通包；不用 onnxruntime-gpu
  # —— 编译型 GPU 后端：声明给「能跑的最低形态」，GPU 变体交给 install_accel.py ——
  "llama-cpp-python>=0.3,<0.4",     # mac: PyPI wheel 带 Metal；win: 脚本装 cu124 wheel
  "pywhispercpp==1.5.0",            # mac: wheel 带 Metal；win CUDA: 脚本源码编译
  "OpenCC==1.3.1",                  # 繁→简确定性转换（C++ 绑定，cp312 预编译 wheel）
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
markers = [
    "smoke: 需要真实模型文件，默认 skip（用 --smoke flag 激活）",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

# 只锁两个目标平台，避免 universal lock 顺带解出 Linux/x86 等域外组合
[tool.uv]
environments = [
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
  "sys_platform == 'win32'",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true        # 只服务被 sources 显式点名的 torch/torchaudio，不污染其它包

[tool.uv.sources]
# mac（darwin）不匹配 marker → 回落默认 PyPI，拿 2.11.0 CPU/MPS wheel
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.15",
]
